--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -39,7 +39,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="{{ '/assets/css/styles.css' | url }}">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- PostHog -->
     <script>
       !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){
@@ -65,7 +65,7 @@
     {% if body_class %}id="{{ body_class }}"{% endif %}
     class="flex flex-col min-h-screen bg-sitebg text-gray-100 text-base font-sans break-words"
   >
-
+<script src="/lib/collections/darkmode.js"></script>
     <!-- Top anchor -->
     <div id="top"></div>
 
