--- a/src/resume.njk
+++ b/src/resume.njk
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Demand Gen Marketing CV Printable A4
+title: Rakshit Soral Demand Gen Resume
 ---
 <head>
   <meta charset="UTF-8">
